# vbmeta_tool

./: .gitignore  CMakeLists.txt  README.md  build.sh  vbmeta.cpp  vbmeta_tool.sh
.github/workflows/: build.yaml
libavb/: avb_footer.c  avb_sha.h  avb_slot_verify.c  avb_util.h
libavb_user/: avb_ops_user.c  avb_ops_user.cpp
